--- a/tabs/studenthome.html
+++ b/tabs/studenthome.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/home/Asset/css/studenthome.css">
     <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/c153436894.js" crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -14,6 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Student page</title>
+
 </head>
 
 <body class="body">
@@ -41,7 +44,7 @@
             <div class="bg-primary h-100 position-absolute width-0-r width-100" id="sub-scroller-3"></div>
         </div>
     </div>
-    <div class="col-md-12 d-flex main-body-container">
+    <div class="col-md-12 d-flex flex-wrap main-body-container">
         <div class="sub-container col-md-4">
             search teacher
             <select class="custom-select" id="search-teacher">
@@ -50,24 +53,67 @@
                 <option value="2">Two</option>
                 <option value="3">Three</option>
             </select>
+            <div class="col-md-12 p-2 rounded mt-1 d-none bgcb" id="teacher-details">
+                <div class="bg-white py-1 rounded d-flex flex-column">
+                    <div class="d-flex col-sm-12 p-0">
+                        <div class="col-sm-4 p-0">Name:</div>
+                        <div class="col-sm-8 p-0">
+                            <name id="TeacherName">Khizar Shaikh</name>
+                        </div>
+                    </div>
+                    <div class="d-flex col-sm-12 p-0">
+                        <div class="col-sm-4 p-0">Subject:</div>
+                        <div class="col-sm-8 p-0">
+                            <subject id="TeacherSubject">Information Technology</subject>
+                        </div>
+                    </div>
+                    <div class="d-flex col-sm-12 p-0">
+                        <div class="col-sm-4 p-0">Phone no.:</div>
+                        <div class="col-sm-8 p-0">
+                            <phone id="TeacherPhone">8828045311</phone>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="sub-container col-md-4">
+        <div class="sub-container col-md-4 d-flex flex-column">
             book appointement
+            <input type="date" class="form-control" name="date" id="date">
+            <input type="time" class="form-control" id="time" name="appt">
+            <div class="p-2 justify-content-center d-flex">
+                <button class="btn btn-outline-danger">ddds</button>
+            </div>
         </div>
         <div class="sub-container col-md-4">
             Send Message
+            <div class="h-280 col-sm-12 bg-white position-relative rounded d-flex flex-column">
+                <div class="bg-danger chat-box overflow-auto">
+
+                </div>
+                <div class="input-group mb-3">
+                    <input class="form-control" type="text">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">-></button>
+                </div>
+            </div>
         </div>
     </div>
     <script>
-
+        var selected;
+        var ApiData = [];
         $(document).ready(function () {
             console.log('ready now')
-            $.get('/api/getTeacher',function(data){
-                console.log(data)
+            $.get('/api/getTeacher', function (data) {
+                // console.log(data)
+                AddDataToList(data)
             })
         });
+        $('#time').focusout(() => {
+            console.log($('#time').val(), 'sdsdfsf')
+        })
+        $('#date').click(() => { console.log('call the date') })
         let from_click = 0
         $("#sub-box-1").click(() => {
+
             ("from sub-scroller-" + from_click)
             if (from_click != 0 && from_click != 1) {
                 // ("call if")
@@ -77,6 +123,11 @@
             from_click = 1
             let temp = document.getElementById("sub-scroller-1")
             AddClass(temp)
+
+            $.get('/api/getTeacher', function (data) {
+                // console.log(data)
+                AddDataToList(data)
+            })
         })
         $("#sub-box-2").click(() => {
             ("from sub-scroller-" + from_click)
@@ -113,10 +164,41 @@
             }
         }
         $('#search-teacher').click(() => {
-            let selected = $('#search-teacher').val()
+            selected = $('#search-teacher').val()
             console.log(selected)
-        })
+            if (selected == 'null') {
+                $("#teacher-details").addClass('d-none')
+                console.log('this is', selected)
 
+            } else {
+                for (count in ApiData) {
+
+                    if (ApiData[count]._id == selected) {
+                        $("#teacher-details").removeClass('d-none')
+                        console.log('here in if', ApiData[count].name)
+                        document.getElementById('TeacherName').innerText = ApiData[count].name
+                        document.getElementById('TeacherSubject').innerText = ApiData[count].subject
+                        document.getElementById('TeacherPhone').innerText = ApiData[count].phone_no
+                    }
+                }
+                console.log('this is ', selected)
+            }
+        })
+        function AddDataToList(obj) {
+            let containe;
+            ApiData = obj
+            console.log('data in global', ApiData)
+            for (i = 0; i < obj.length; i++) {
+                console.log('val', obj[i])
+                if (i == 0) {
+                    containe = `<option value="null">Choose</option>`
+                    containe += `<option value="${obj[i]._id}">${obj[i].name}</option>`
+                }
+                else
+                    containe += `<option value="${obj[i]._id}">${obj[i].name}</option>`
+            }
+            document.getElementById('search-teacher').innerHTML = containe
+        }
         // mongodb+srv://khizar:<password>@cluster0.ijkkm.mongodb.net/?retryWrites=true&w=majority
 
 
